Added font styles

--- a/index.html
+++ b/index.html
@@ -1,10 +1,37 @@
 <!--  Style this title and subtitle.
       Extra points: Use font from google fonts Quicksand  -->
+<!DOCTYPE html>
+<html lang="en">
 
-<h1>Title</h1>
-<h2>Subtitle</h2>
+<head>
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="stylesheet" href="style.css">
+      <link rel="preconnect" href="https://fonts.gstatic.com">
+      <link href="https://fonts.googleapis.com/css2?family=Stalinist+One&display=swap" rel="stylesheet">
+      <link rel="preconnect" href="https://fonts.gstatic.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com">
+      <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap" rel="stylesheet">
+      <link rel="preconnect" href="https://fonts.gstatic.com">
+      <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+      <link rel="preconnect" href="https://fonts.gstatic.com">
+      <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
 
-<!-- Create your own style -->
+      <title>Font Style</title>
+</head>
 
-<h1>Your Style</h1>
-<h2>Your Sub Style</h2>
+<body>
+
+      <h1 class="title">Title</h1>
+      <h2 class="subtitle">Subtitle</h2>
+
+
+
+      <!-- Create your own style -->
+
+      <h1 class="style">Your Style</h1>
+      <h2 class="substyle">Your Sub Style</h2>
+</body>
+
+</html>
